--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
    <h1>SKILLS</h1>
    <div class="skills1">
     <div>
-        <img src="html.jpeg" alt="html" id="image1">
+        <img src="html.png" alt="html" id="image1">
         <h4>HTML</h4>
     </div>
     <div>
