--- a/index.html
+++ b/index.html
@@ -65,42 +65,42 @@
    <h1>SKILLS</h1>
    <div class="skills1">
     <div>
-        <img src="html.png" alt="html" id="image1">
-        <h4>HTML</h4>
+        <img src="html-5.png" alt="html" id="image1">
+        <h4 style="text-align: center;">HTML</h4>
     </div>
     <div>
-        <img src="css.jpeg" alt="css" id="image1">
-        <h4>CSS</h4>
+        <img src="css.png" alt="css" id="image1">
+        <h4 style="text-align: center;">CSS</h4>
     </div>
     <div>
-        <img src="js.jpeg" alt="js" id="image1">
-        <h4>JavaScript</h4>
+        <img src="js.png" alt="js" id="image1">
+        <h4 style="text-align: center;">JavaScript</h4>
     </div>
     <div>
-        <img src="bootstrap.jpeg" alt="bs" id="image1">
-        <h4>bootstrap</h4>
+        <img src="bootstrap.png" alt="bs" id="image1">
+        <h4 style="text-align: center;">bootstrap</h4>
     </div>
     <div>
         <img src="t css.png" alt="tcss" id="image1">
-        <h4>TAILWAND CSS</h4>
+        <h4 style="text-align: center;">TAILWAND CSS</h4>
     </div>
    </div>
    <div class="skills2">
     <div>
-        <img src="react.jpeg" alt="react" id="image1">
-        <h4>React.js</h4>
+        <img src="library.png" alt="react" id="image1">
+        <h4 style="text-align: center;">React.js</h4>
     </div>
     <div>
-        <img src="python.jpeg" alt="python" id="image1">
-        <h4>PYTHON</h4>
+        <img src="python.png" alt="python" id="image1">
+        <h4 style="text-align: center;">PYTHON</h4>
     </div>
     <div>
-        <img src="node.png" alt="node" id="image1">
-        <h4>NODE.JS</h4>
+        <img src="nodejs.png" alt="node" id="image1">
+        <h4 style="text-align: center;">NODE.JS</h4>
     </div>
     <div>
-        <img src="java.jpeg" alt="java" id="image1">
-        <h4>JAVA</h4>
+        <img src="java.png" alt="java" id="image1">
+        <h4 style="text-align: center;">JAVA</h4>
     </div>
    </div>
 </div>
