--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vishnukvvr</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
     <div class="container">
@@ -33,7 +34,7 @@
     <span class="spann"></span></p>
 </div>
 <div style="background-color: black;">
-<div id="about">
+<div id="about" data-aos="fade-up-right">
     <h1>ABOUT ME</h1>
     <div class="aboutme">
     <img src="vishnu.html.jpg" alt="vishnu" id="image">
@@ -41,72 +42,72 @@
 </div>
 </div>
 <br>
-<div id="education">
+<div id="education" data-aos="fade-down-right">
     <h1>EDUCATION</h1>
     <div class="education1">
-    <div class="school">
+    <div class="school" data-aos="fade-down">
         <h3 style="font-size: 2rem; font-weight: bold;">Gates Institute of Technology</h3>
         <span class="year" style="font-size: 1.5rem; font-weight: bold;">Bachelors of technology in CSE (Data Science) Gooty, Andhra Pradesh </span><br>
         <span class="year" style="font-size: 1.5rem; font-weight: bold;">2021-2025</span>
     </div>
-    <div class="inter">
+    <div class="inter" data-aos="fade-down">
         <h3 style="font-size: 2rem; font-weight: bold;">Narayana Jr College</h3>
         <span class="year" style="font-size: 1.5rem; font-weight: bold;">M.P.C-91% Kurnool,Andhra Pradesh</span><br>
         <span class="year" style="font-size: 1.5rem; font-weight: bold;">2019-2021</span>
     </div>
-    <div class="btech">
+    <div class="btech" data-aos="fade-down">
         <h3 style="font-size: 2rem; font-weight: bold;">Anantha Vidhya Niketan EM School</h3>
         <span class="year" style="font-size: 1.5rem; font-weight: bold;">scored 9.3GPA anantapur, Andhra Pradesh</span><br>
         <span class="year" style="font-size: 1.5rem; font-weight: bold;">2019</span>
     </div>
 </div>
 </div>
-<div id="skills">
+<div id="skills" data-aos="fade-right">
    <h1>SKILLS</h1>
    <div class="skills1">
-    <div>
+    <div data-aos="zoom-in">
         <img src="html-5.png" alt="html" id="image1">
         <h4 style="text-align: center;">HTML</h4>
     </div>
-    <div>
+    <div data-aos="zoom-in">
         <img src="css.png" alt="css" id="image1">
         <h4 style="text-align: center;">CSS</h4>
     </div>
-    <div>
+    <div data-aos="zoom-in">
         <img src="js.png" alt="js" id="image1">
         <h4 style="text-align: center;">JavaScript</h4>
     </div>
-    <div>
+    <div data-aos="zoom-in">
         <img src="bootstrap.png" alt="bs" id="image1">
         <h4 style="text-align: center;">bootstrap</h4>
     </div>
-    <div>
+    <div data-aos="zoom-in">
         <img src="t css.png" alt="tcss" id="image1">
         <h4 style="text-align: center;">TAILWAND CSS</h4>
     </div>
    </div>
    <div class="skills2">
-    <div>
+    <div data-aos="zoom-in">
         <img src="library.png" alt="react" id="image1">
         <h4 style="text-align: center;">React.js</h4>
     </div>
-    <div>
+    <div data-aos="zoom-in">
         <img src="python.png" alt="python" id="image1">
         <h4 style="text-align: center;">PYTHON</h4>
     </div>
-    <div>
+    <div data-aos="zoom-in">
         <img src="nodejs.png" alt="node" id="image1">
         <h4 style="text-align: center;">NODE.JS</h4>
     </div>
-    <div>
+    <div data-aos="zoom-in">
         <img src="java.png" alt="java" id="image1">
         <h4 style="text-align: center;">JAVA</h4>
     </div>
    </div>
 </div>
-<div id="projects">
+<div id="projects" data-aos="zoom-in-right">
     <h1>PROJECTS</h1>
-    <div class="projects">
+    <div class="projects" data-aos="zoom-out-up">
 <div class="projects1">
         <img src="pro1.png" alt="projects" style="width: 300px;" class="image4">
         <div class="body">
@@ -148,7 +149,7 @@
 </div>
 </div>
 </div>
-<div class="projects">
+<div class="projects" data-aos="zoom-out-up">
     <div class="projects1">
             <img src="pro5.png" alt="projects" style="width: 300px;" class="image4">
             <div class="body">
@@ -190,7 +191,7 @@
     </div>
     </div>
     </div>
-    <div class="projects">
+    <div class="projects" data-aos="zoom-out-up">
         <div class="projects1">
                 <img src="pro9.png" alt="projects" style="width: 300px;" class="image4">
                 <div class="body">
@@ -211,9 +212,29 @@
         </div>
         </div>
         </div>  
+        <div class="projects1">
+            <img src="vishnu10.png" alt="projects" style="width: 300px;" class="image4">
+            <div class="body">
+            <h4>5 Days challenge(weather app,todolist etc.)</h4>
+            <div class="buttons">
+            <button id="btn1"><a href="https://vishnukvvr.github.io/5-days-challenge/" target="_blank">Demo</a></button>
+            <button id="btn2"><a href="https://github.com/Vishnukvvr/5-days-challenge" target="_blank">GitHub</a></button>
+        </div>
+        </div>
+        </div>  
+         <div class="projects1">
+            <img src="vishnu11.png" alt="projects" style="width: 300px;" class="image4">
+            <div class="body">
+            <h4>FASHIQUE</h4>
+            <div class="buttons">
+            <button id="btn1"><a href="https://vishnukvvr.github.io/FASHIQUE/" target="_blank">Demo</a></button>
+            <button id="btn2"><a href="https://github.com/Vishnukvvr/FASHIQUE" target="_blank">GitHub</a></button>
+        </div>
+        </div>
+        </div>  
         </div>
 </div>
-<div id="contact">
+<div id="contact" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
     <h1>CONTACT</h1>
     <div class="forms">
     <form action="https://formspree.io/f/xrbzvwnn" method="post"><br>
@@ -250,5 +271,9 @@
 </div>
 </div>
     <script src="script.js"></script>
+     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
